# base-knowledge

./: .gitignore  Dockerfile.chat-service  Dockerfile.document-service  README.md  docker-compose.yml  env.azure.example  env.example  pyproject.toml  start.sh
chat-service/: main.py
chat-service/agents/: __init__.py  document_agent.py  document_list_agent.py  duckduckgo_agent.py  orchestrator.py  schema.py
chat-service/routes/: __init__.py  chat.py  conversations.py
chat-service/services/: document_api_client.py  mcp_search_client.py  openai_client.py
document-service/: __init__.py  main.py
document-service/routes/: __init__.py  documents.py  upload.py
document-service/schemas/: __init__.py  document_schemas.py
document-service/services/: __init__.py  document_processor.py
shared/database/: __init__.py  config.py
shared/models/: __init__.py  conversation.py  document.py
shared/repository/: __init__.py  conversation_repository.py  document_repository.py
